# ota-updater

./: CMakeLists.txt  Log.hpp  README.md  RawImageHandler.cpp  TegraSlotManager.hpp  UpdateManager.cpp  UpdateManager.hpp  artifact_handler.cpp  artifact_handler.h  boot_control.cpp  boot_control.h  conanfile.txt  decompressors.h  errors.h  file_reader.h  health_check.cpp  health_check.h  journal.cpp  journal.h  main.cpp  manifest_loader.cpp  manifest_loader.h  ota.sh  planner.cpp  planner.h  setup_and_build.sh  slot_manager.cpp  slot_manager.h  stream.h  tar_extractor.h  types.h  update_manager.cpp  update_manager.h  verifier.cpp  verifier.h
apps/: main.cpp
include/flash/: archive_installer.hpp  counting_reader.hpp  file_reader.hpp  flasher.hpp  io.hpp  manifest.hpp  ota_bundle_reader.hpp  ota_installer.hpp  partition_writer.hpp  result.hpp  update_module.hpp
manifests/: sample_manifest.json
src/: archive_installer.cpp  console_progress.cpp  fd.cpp  file_reader.cpp  flasher.cpp  logger.cpp  main.cpp  manifest.cpp  ota_bundle_reader.cpp  ota_installer.cpp  partition_writer.cpp  signals.cpp  update_module.cpp
tests/: CMakeLists.txt  test_fd.cpp  test_file_reader.cpp  test_flasher.cpp  test_partition_writer.cpp  test_update.cpp  testing.hpp
